--- a/InteractiveGraphicalApp/InteractiveGraphicalApp/guidance/shutherland-hodgman.html
+++ b/InteractiveGraphicalApp/InteractiveGraphicalApp/guidance/shutherland-hodgman.html
@@ -90,8 +90,7 @@
 
     <h2>🎥 Recommended Videos</h2>
     <p>Visual explanation of the algorithm:</p>
-    <iframe src="https://www.youtube.com/embed/sSrp4jvj1SA" title="Sutherland Hodgman Polygon Clipping Algorithm | Computer Graphics" allowfullscreen></iframe>
-
+<iframe width="837" height="471" src="https://www.youtube.com/embed/7HzKJCpUVYg" title="Computer Graphics: Lecture #19: Sutherland- Hodgeman Polygon clipping" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
     <h2>🧠 Summary</h2>
     <ul>
       <li>Best suited for convex clipping windows.</li>
