--- a/InteractiveGraphicalApp/InteractiveGraphicalApp/guidance/bezier.html
+++ b/InteractiveGraphicalApp/InteractiveGraphicalApp/guidance/bezier.html
@@ -89,8 +89,7 @@
 
     <h2>🎥 Recommended Videos</h2>
     <p>Learn how Bézier curves are calculated and used:</p>
-    <iframe src="https://www.youtube.com/embed/aVwxzDHniEw" title="Bézier Curves Explained" allowfullscreen></iframe>
-
+<iframe width="837" height="471" src="https://www.youtube.com/embed/aVwxzDHniEw" title="The Beauty of Bézier Curves" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
     <h2>🧠 Summary</h2>
     <ul>
       <li>Used in design, animation, and path smoothing.</li>
