--- a/InteractiveGraphicalApp/InteractiveGraphicalApp/guidance/bsplines.html
+++ b/InteractiveGraphicalApp/InteractiveGraphicalApp/guidance/bsplines.html
@@ -94,8 +94,7 @@
 
     <h2>🎥 Recommended Videos</h2>
     <p>Watch this video for a visual understanding of B-Spline curves:</p>
-    <iframe src="https://www.youtube.com/embed/9eV1op1J6lw" title="B-Spline Curves Explained - Computer Graphics" allowfullscreen></iframe>
-
+<iframe width="837" height="471" src="https://www.youtube.com/embed/JwN43QAlF50" title="Splines in 5 minutes:  Part 3 -- B-splines and 2D" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
     <h2>🧠 Summary</h2>
     <ul>
       <li>Generalization of Bézier curves with better local control.</li>
